creation of CSS

--- a/index.html
+++ b/index.html
@@ -6,14 +6,31 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-
+    <link href="assets/css/style.css" rel="stylesheet">
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-      <header></header>
+      <header>
+            <div class="row no-gutters">
+                <a href="index.html" class="col-md-4 logo bg-color-head"></a>
+                <div class="col-md-8">
+                    <div class="row bg-color-head no-gutters">
+                        <div class= "col brand">
+                            <h1 class="name">Teifi Taekwondo</h1>
+                            <h2 class="title">Your Kicks Start with simple cicks</h2>
+                        </div>
+                    </div>
+                    <div class="row no-gutters">
+                        <div class="col">
+                            
+                        </div>
+                    </div>
+                </div>
+            </div>
+    </header>
+
       <section></section>
       <footer></footer>
-    <h1>Teifi Taekwondo</h1>
 
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
