Complete index, creation of about. CSS still to be configured correctly

--- a/index.html
+++ b/index.html
@@ -10,28 +10,162 @@
     <title>Teifi Taekwondo</title>
   </head>
   <body>
-      <header>
-            <div class="row no-gutters">
-                <a href="index.html" class="col-md-4 logo bg-color-head"></a>
-                <div class="col-md-8">
-                    <div class="row bg-color-head no-gutters">
-                        <div class= "col brand">
-                            <h1 class="name">Teifi Taekwondo</h1>
-                            <h2 class="title">Your Kicks Start with simple cicks</h2>
-                        </div>
-                    </div>
-                    <div class="row no-gutters">
-                        <div class="col">
-                            
-                        </div>
+        <header>
+        <!-- Logo Name Navigation-->
+            <div class="container-fluid">
+                <div class="row">
+                    <a class="col-md-4 logo" href="index.html"></a>
+                    <div class="col-md-8">
+                        <h1 class="name">Teifi Taekwondo</h1>
+                        <h3 class="slogan">Big Kicks begin with Small Clicks</h3>
                     </div>
                 </div>
             </div>
-    </header>
+            <div class="container">
+                <div class="row">
+                    <div class="col">
+                            <ul id="nav" class="list-inline menucontainer">
+                                <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                    <a href="index.html"> <span>Home</span> </a>
+                                </li>
+                                <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                    <a href="about.html"><span>About</span></a>
+                                </li>
+                                <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                    <div class="dropdown">
+                                        <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
+                                        <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                                            <li><a class="dropdown-item" href="#">Tigers</a></li>
+                                            <li><a class="dropdown-item" href="#">Juniors</a></li>
+                                            <li><a class="dropdown-item" href="#">Seniors</a></li>
+                                            <li><a class="dropdown-item" href="#">Ladies</a><span class="badge bg-success">New</span></li>
+                                        </ul>
+                                    </div>
+                                </li>
+                                <li class="col-6 col-sm-3 list-inline-item menuitem">
+                                    <a href="index.html"> <span>Contact</span></a>
+                                </li>
+                            </ul>        
+                        </div>
+                    </div>
+                </div>
+        </header>
 
-      <section></section>
-      <footer></footer>
-
+        <section>
+            <!-- Benefits of Meaning of TKD -->
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-10 benefit">
+                        <h2 class="uppercase">Why Join Teifi Taekwondo?</h2>
+                        <div class="row">
+                            <div class="col-md-5 benefit-left">
+                                <h3>Improve Fitness</h3>
+                                <hr>
+                                <p>Boost your stamina, get stronger, lose fat and improve your flexibility.</p>
+                                <h3>Build Confidence</h3>
+                                <hr>
+                                <p>Break out of your shell with our warm and supportive community</p>
+                            </div>
+                            <div class="col-md-5 benefit-right">
+                                <h3>Relieve Stress</h3>
+                                <hr>
+                                <p>Training helps your body release a chemical called endorphins which not only helps provides you with “feel good” emotions.</p>
+                                <h3>Develop Discipline</h3>
+                                <hr>
+                                <p>Become focused, patient and poite</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-md-2">
+                        <h2 class="uppercase">Tae</h2>
+                        <h2 class="uppercase">Kwon</h2> 
+                        <h2 class="uppercase">Do</h2>
+                    </div>
+                </div>
+            </div>
+            <!-- Classes Cards-->
+            <div class="container">
+                <div class="row card-row">
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card">
+                            <div class="card-header head-tiger">
+                                <h5 class="card-title">Tigers</h5>
+                            </div>
+                            <img src="..." class="card-img-top" alt="Tigers in training">
+                          <div class="card-body">
+                              <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games. </p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                          </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card">
+                         <div class="card-header head-juniors">
+                             <h5 class="card-title">Juniors</h5>
+                         </div>
+                         <img src="..." class="card-img-top" alt="Juniors in class training">
+                         <div class="card-body">
+                             <p class="card-text">Our junior classes are perfect for children aged 8 – 12 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.
+</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                         </div>
+                        </div>
+                    </div>
+                    <div class="col-sm-6 col-md-3">
+                        <div class="card">
+                         <div class="card-header head-seniors">
+                             <h5 class="card-title">Seniors</h5>
+                         </div>
+                         <img src="..." class="card-img-top" alt="Seniors in class session">
+                         <div class="card-body">
+                             <p class="card-text">This programme will teach you all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist and eventually take you to Black Belt where your Martial Arts journey will continue.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                          </div>
+                        </div>
+                 </div>
+                 <div class="col-sm-6 col-md-3">
+                     <div class="card">
+                         <div class="card-header head-ladies">
+                             <h5 class="card-title">Ladies<span class="badge bg-success">New</span></h5>
+                         </div>
+                          <img src="..." class="card-img-top" alt="ladies training">
+                         <div class="card-body">
+                             <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
+                              <a href="#" class="btn btn-primary">Go somewhere</a>
+                         </div>
+                     </div>
+                 </div>
+                </div>
+            </div>
+            <!-- Contact Information-->
+           <div class="container">
+                <div class="row contact-info">
+                    <div class="col-sm-6">
+                     Phone Number
+                     Email address
+                    </div>
+                    <div class="col-sm-6">
+                    Image of map location
+                    </div>
+                </div>
+            </div> 
+        </section>
+        <footer>
+            <!-- sections 1 social media -->
+            <div class="row">
+                <div class="col-md-4">
+                    <a href="#" target="_blank">Facebook</a>
+                    <a href="#" target="_blank">Instagram</a>
+                    <a href="#" target="_blank">Youtube</a>
+                    <a href="#" target="_blank">Twitter</a>
+                </div>    
+                <div class="col-md-5">
+                    Sign Up for a trail class today
+                    <a href="#" type="button" class="btn btn-danger">Join In</a>
+                </div>
+                <div class="col-md-3">Copywright 2021</div>
+            </div>
+        </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
