--- a/about.html
+++ b/about.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" integrity="sha384-SZXxX4whJ79/gErwcOYf+zWLeJdY/qpuqC4cAa9rOGUstPomtqpuNWT9wdPEn2fk" crossorigin="anonymous">
     <link href="assets/css/style.css" rel="stylesheet">
     <title>Teifi Taekwondo</title>
   </head>
@@ -26,7 +27,7 @@
                     <div class="col">
                             <ul id="nav" class="list-inline menucontainer">
                                 <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Home</span> </a>
+                                    <a href="index.html"><span>Home</span></a>
                                 </li>
                                 <li class="col-6 col-sm-3 list-inline-item menuitem">
                                     <a href="about.html"><span>About</span></a>
@@ -35,10 +36,10 @@
                                     <div class="dropdown">
                                         <a class="btn dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-bs-toggle="dropdown" aria-expanded="false">Classes</a>
                                         <ul class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                                            <li><a class="dropdown-item" href="#">Tigers</a></li>
-                                            <li><a class="dropdown-item" href="#">Juniors</a></li>
-                                            <li><a class="dropdown-item" href="#">Seniors</a></li>
-                                            <li><a class="dropdown-item" href="#">Ladies</a><span class="badge bg-success">New</span></li>
+                                            <li><a class="dropdown-item" href="class_tiger.html">Tigers</a> </li>
+                                            <li><a class="dropdown-item" href="class_junior.html">Juniors</a></li>
+                                            <li><a class="dropdown-item" href="class_senior.html">Seniors</a></li>
+                                            <li><a class="dropdown-item" href="class_ladies.html">Ladies</a>  <span class="badge bg-success">New</span></li>
                                         </ul>
                                     </div>
                                 </li>
@@ -50,7 +51,6 @@
                     </div>
                 </div>
         </header>
-
         <section>
             <!-- About the Club -->
             <div class="container">
@@ -78,9 +78,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Third Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
                               <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University and the kickboxing clubs into the formation of the club alongside training partner Holly</p>
-                                <a href="#" target="_blank">Facebook</a>
-                                <a href="#" target="_blank">Instagram</a>
-                                <a href="#" target="_blank">Twitter</a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                           </div>
                           <div class="card-footer">
                                 Laura Teaches our Tigers, Junior, Senior and Ladies Classes
@@ -98,9 +98,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Second Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
                               <p class="card-text">Holly started TKD with Laura however due to her University degree temporarily stopped and began her journey in kickboxing. Returning home she reconnected with Laura to complete her first dan in takewondo whilst also introducing Laura to kickboxing fighting her way to her black belt.  </p>
-                                <a href="#" target="_blank">Facebook</a>
-                                <a href="#" target="_blank">Instagram</a>
-                                <a href="#" target="_blank">Twitter</a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                           </div>
                           <div class="card-footer">
                                 Holly Teaches our Junior, Senior and Ladies Classes
@@ -118,9 +118,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Judo</h6>
                               <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University and the kickboxing clubs into the formation of the club alongside training partner Holly</p>
-                                <a href="#" target="_blank">Facebook</a>
-                                <a href="#" target="_blank">Instagram</a>
-                                <a href="#" target="_blank">Twitter</a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                           </div>
                           <div class="card-footer">
                                 Adam Teaches our Junior and Senior Classes
@@ -138,9 +138,9 @@
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               
                               <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks. Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
-                                <a href="#" target="_blank">Facebook</a>
-                                <a href="#" target="_blank">Instagram</a>
-                                <a href="#" target="_blank">Twitter</a>
+                                <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                                <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                           </div>
                           <div class="card-footer">
                                 Emma Teaches our Tigers and Junior classes
@@ -166,13 +166,14 @@
             <!-- sections 1 social media -->
             <div class="row">
                 <div class="col-md-4">
-                    <a href="#" target="_blank">Facebook</a>
-                    <a href="#" target="_blank">Instagram</a>
-                    <a href="#" target="_blank">Youtube</a>
-                    <a href="#" target="_blank">Twitter</a>
+                    <h6>Follow Us on Social Media</h6>
+                    <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-youtube"></i></a>
+                    <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
                 </div>    
                 <div class="col-md-5">
-                    Sign Up for a trail class today
+                    Sign Up for a trial class today
                     <a href="#" type="button" class="btn btn-danger">Join In</a>
                 </div>
                 <div class="col-md-3">Copywright 2021</div>
