Frameworks for the pages completed

--- a/class_ladies.html
+++ b/class_ladies.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </li>
                                 <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Contact</span></a>
+                                    <a href="contact.html"> <span>Contact</span></a>
                                 </li>
                             </ul>        
                         </div>
@@ -67,6 +67,9 @@
                                  </tr>
                             </thead>
                         </table>
+                        <img src="" alt="Our Ladies in Training">
+                        <p>Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
+                        <p>Our ladies follow the same syllabus as our junior and senior classes. </p>
                     </div>
                     <div class="col-md-4">
                         <h3>Class Coaches</h3>
@@ -93,18 +96,6 @@
                     </div>
                 </div>
             </div>
-                    </div>
-                </div>
-            </div>
-            <!-- Contact Information-->
-           <div class="container">
-                <div class="row contact-info">
-                    <div class="col-sm-6">
-                     Phone Number
-                     Email address
-                    </div>
-                    <div class="col-sm-6">
-                    Image of map location
                     </div>
                 </div>
             </div> 
