--- a/class_tiger.html
+++ b/class_tiger.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </li>
                                 <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Contact</span></a>
+                                    <a href="contact.html"> <span>Contact</span></a>
                                 </li>
                             </ul>        
                         </div>
@@ -67,49 +67,38 @@
                                  </tr>
                             </thead>
                         </table>
+                        <img src="" alt="Tigers in training">
+                        <p>Our Tigers programme has been specifically created to be interactive and engaging for our youngest of Martial Artists.</p>
+                        <p>The Tiger's learn through a variety of games and activities that introduce the techniques and skills which will set them up for our older classes.</p>
+                        <p>The programme designed for the Tigers goes beyond the teaching of Martial Arts and self-defence to include the teaching of self-protection, important life skills and character education. Every parent’s paramount concern is their children’s safety, so we include safety orientated lessons that focus on topics such as dealing with bullies and strangers.</p>
                     </div>
                     <div class="col-md-4">
                         <h3>Class Coaches</h3>
                         <div class="container">
-                <h2>Meet Our Coaching Team</h2>
-                <div class="row card-row">
-                    <div class="col">
-                        <div class="card classcard">
-                            
-                            <img src="..." class="card-img-top" alt="Coach Laura">
-                          <div class="card-body">
-                                    <h4 class="card-title">Laura Williams</h4>
-                                    <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
-                          </div>
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="card classcard">
-                            
-                            <img src="..." class="card-img-top" alt="Coach Emma">
-                          <div class="card-body">
+                            <div class="row card-row">
+                              <div class="col">
+                                <div class="card classcard">
+                                    <img src="..." class="card-img-top" alt="Coach Laura">
+                                     <div class="card-body">
+                                        <h4 class="card-title">Laura Williams</h4>
+                                        <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col">
+                                <div class="card classcard">
+                                    <img src="..." class="card-img-top" alt="Coach Emma">
+                                  <div class="card-body">
                                     <h4 class="card-title">Emma Owen</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
-                          </div>
+                                  </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>
-            </div>
                     </div>
                 </div>
             </div>
-            <!-- Contact Information-->
-           <div class="container">
-                <div class="row contact-info">
-                    <div class="col-sm-6">
-                     Phone Number
-                     Email address
-                    </div>
-                    <div class="col-sm-6">
-                    Image of map location
-                    </div>
-                </div>
-            </div> 
         </section>
         <footer>
             <!-- sections 1 social media -->
