--- a/class_junior.html
+++ b/class_junior.html
@@ -44,7 +44,7 @@
                                     </div>
                                 </li>
                                 <li class="col-6 col-sm-3 list-inline-item menuitem">
-                                    <a href="index.html"> <span>Contact</span></a>
+                                    <a href="contact.html"> <span>Contact</span></a>
                                 </li>
                             </ul>        
                         </div>
@@ -67,6 +67,7 @@
                                  </tr>
                             </thead>
                         </table>
+                        <img src="" alt="Junior Class in training">
                         <p>Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.</p>
                         <p>Children who are new to taekwondo will be taught the basics like how to block, strike, punch and kick. Then they work through the syllabus with our instructors, they will be taught more advanced techniques and patterns to progress.</p>
                     </div>
@@ -106,18 +107,7 @@
                     </div>
                 </div>
             </div>
-            <!-- Contact Information-->
-           <div class="container">
-                <div class="row contact-info">
-                    <div class="col-sm-6">
-                     Phone Number
-                     Email address
-                    </div>
-                    <div class="col-sm-6">
-                    Image of map location
-                    </div>
-                </div>
-            </div> 
+
         </section>
         <footer>
             <!-- sections 1 social media -->
