Addition of Images to assests and pages

--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                                 <h4 class="card-title">Laura Williams</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
                             </div>
-                            <img src="..." class="card-img-top" alt="Coach Laura">
+                            <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Third Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
@@ -93,7 +93,7 @@
                                 <h4 class="card-title">Holly White</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Senior Instructor</h5>
                             </div>
-                            <img src="..." class="card-img-top" alt="Coach Laura">
+                            <img src="assets/images/holly.jpg" class="card-img-top" alt="Coach Holly">
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Second Degree Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Kickboxing</h6>
@@ -113,11 +113,11 @@
                                 <h4 class="card-title">Adam Knight</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
                             </div>
-                            <img src="..." class="card-img-top" alt="Coach Adam">
+                            <img src="assets/images/adam.jpg" class="card-img-top" alt="Coach Adam">
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Judo</h6>
-                              <p class="card-text">Founder of Teifi TKD Laura undertook TKD at the age of 8 to help deal with bullies. Her passion continued through University and the kickboxing clubs into the formation of the club alongside training partner Holly</p>
+                              <p class="card-text">Adam joined Teifi Taekwondo after relocating due to a change of career bringing with him knowledge and experince in Judo. Adam's dedication to learning saw him quickly ris through the ranks and his Judo expertise assiting the club in our self-defence drills across the classes.</p>
                                 <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
                                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
@@ -133,11 +133,12 @@
                                 <h4 class="card-title">Emma Owen</h4>
                                 <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
                             </div>
-                            <img src="..." class="card-img-top" alt="Coach Emma">
+                            <img src="assets/images/emma.jpg" class="card-img-top" alt="Coach Emma">
                           <div class="card-body">
                               <h6 class="card-subtitle mb-2 text-muted">Black Belt in Taekwondo</h6>
                               
-                              <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks. Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
+                              <p class="card-text">Emma joined our Juniors class on its first day. Over the last 9 years she has moved up the ranks.</p>
+                              <p class="card-text">Whilst currently undertaking a degree in Primary Education she made the move to our instructor team to enhance her learning and talents. Taking our Tigers and Juniors before training herself with the seniors in search of her Second Dan.</p>
                                 <a href="#" target="_blank"><i class="fab fa-facebook"></i></a>
                                 <a href="#" target="_blank"><i class="fab fa-instagram"></i></a>
                                 <a href="#" target="_blank"><i class="fab fa-twitter"></i></a>
