--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                             <div class="card-header head-tiger">
                                 <h5 class="card-title">Tigers</h5>
                             </div>
-                            <img src="..." class="card-img-top" alt="Tigers in training">
+                            <img src="assets/images/tiger1.jpg" class="card-img-top" alt="Tigers in training">
                           <div class="card-body">
                               <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games. </p>
                               <a href="class_tiger.html" class="btn btn-primary">Go somewhere</a>
@@ -103,7 +103,7 @@
                          <div class="card-header head-juniors">
                              <h5 class="card-title">Juniors</h5>
                          </div>
-                         <img src="..." class="card-img-top" alt="Juniors in class training">
+                         <img src="assets/images/junior1.jpg" class="card-img-top" alt="Juniors in class training">
                          <div class="card-body">
                              <p class="card-text">Our junior classes are perfect for children aged 8 – 12 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.
 </p>
@@ -116,7 +116,7 @@
                          <div class="card-header head-seniors">
                              <h5 class="card-title">Seniors</h5>
                          </div>
-                         <img src="..." class="card-img-top" alt="Seniors in class session">
+                         <img src="assets/images/senior1.jpg" class="card-img-top" alt="Seniors in class session">
                          <div class="card-body">
                              <p class="card-text">This programme will teach you all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist and eventually take you to Black Belt where your Martial Arts journey will continue.</p>
                               <a href="class_senior.html" class="btn btn-primary">Go somewhere</a>
@@ -128,7 +128,7 @@
                          <div class="card-header head-ladies">
                              <h5 class="card-title">Ladies   <span class="badge bg-success">New</span></h5>
                          </div>
-                          <img src="..." class="card-img-top" alt="ladies training">
+                          <img src="assets/images/ladies1.jpeg" class="card-img-top" alt="ladies training">
                          <div class="card-body">
                              <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
                               <a href="class_ladies.html" class="btn btn-primary">Go somewhere</a>
@@ -145,7 +145,7 @@
                      Email address
                     </div>
                     <div class="col-sm-6">
-                    Image of map location
+                    <img id="map" src="assets/images/map.jpg" alt="class location">
                     </div>
                 </div>
             </div> 
