--- a/class_junior.html
+++ b/class_junior.html
@@ -67,7 +67,9 @@
                                  </tr>
                             </thead>
                         </table>
-                        <img src="" alt="Junior Class in training">
+                        <div class="col">
+                            <img class="classimage" src="assets/images/junior1.jpg" alt="Junior Class in training">
+                        </div>
                         <p>Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.</p>
                         <p>Children who are new to taekwondo will be taught the basics like how to block, strike, punch and kick. Then they work through the syllabus with our instructors, they will be taught more advanced techniques and patterns to progress.</p>
                     </div>
@@ -77,7 +79,7 @@
                             <div class="row card-row">
                     <div class="col">
                         <div class="card classcard">           
-                            <img src="..." class="card-img-top" alt="Coach Laura">
+                            <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                           <div class="card-body">
                                     <h4 class="card-title">Laura Williams</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
@@ -86,7 +88,7 @@
                     </div>
                     <div class="col">
                         <div class="card classcard">                          
-                            <img src="..." class="card-img-top" alt="Coach Laura">
+                            <img src="assets/images/holly.jpg" class="card-img-top" alt="Coach Holly">
                           <div class="card-body">
                                     <h4 class="card-title">Holly White</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Senior Instructor</h5>
@@ -95,7 +97,7 @@
                     </div>
                     <div class="col">
                         <div class="card classcard">
-                            <img src="..." class="card-img-top" alt="Coach Emma">
+                            <img src="assets/images/emma.jpg" class="card-img-top" alt="Coach Emma">
                           <div class="card-body">
                                     <h4 class="card-title">Emma Owen</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Instructor</h5>
