--- a/class_ladies.html
+++ b/class_ladies.html
@@ -67,7 +67,7 @@
                                  </tr>
                             </thead>
                         </table>
-                        <img src="" alt="Our Ladies in Training">
+                        <img class="classimage" src="assets/images/ladies3.jpeg" alt="Our Ladies in Training">
                         <p>Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
                         <p>Our ladies follow the same syllabus as our junior and senior classes. </p>
                     </div>
@@ -78,7 +78,7 @@
                 <div class="row">
                     <div class="col">
                         <div class="card classcard">                           
-                            <img src="..." class="card-img-top" alt="Coach Laura">
+                            <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                           <div class="card-body">
                                     <h4 class="card-title">Laura Williams</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Head Instructor</h5>
@@ -87,7 +87,7 @@
                     </div>
                     <div class="col">
                         <div class="card classcard">   
-                            <img src="..." class="card-img-top" alt="Coach Emma">
+                            <img src="assets/images/holly.jpg" class="card-img-top" alt="Coach Emma">
                           <div class="card-body">
                                     <h4 class="card-title">Holly White</h4>
                                     <h5 class="card-subtitle mb-2 text-muted">Senior Instructor</h5>
