Addition of information and formation of readme

--- a/class_junior.html
+++ b/class_junior.html
@@ -78,7 +78,7 @@
                         <div class="container">
                             <div class="row card-row">
                     <div class="col">
-                        <div class="card classcard">           
+                        <div class="card coachcard">           
                             <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                           <div class="card-body">
                                     <h4 class="card-title">Laura Williams</h4>
@@ -87,7 +87,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card classcard">                          
+                        <div class="card coachcard">                          
                             <img src="assets/images/holly.jpg" class="card-img-top" alt="Coach Holly">
                           <div class="card-body">
                                     <h4 class="card-title">Holly White</h4>
@@ -96,7 +96,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card classcard">
+                        <div class="card coachcard">
                             <img src="assets/images/emma.jpg" class="card-img-top" alt="Coach Emma">
                           <div class="card-body">
                                     <h4 class="card-title">Emma Owen</h4>
