--- a/class_ladies.html
+++ b/class_ladies.html
@@ -68,16 +68,17 @@
                             </thead>
                         </table>
                         <img class="classimage" src="assets/images/ladies3.jpeg" alt="Our Ladies in Training">
-                        <p>Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
-                        <p>Our ladies follow the same syllabus as our junior and senior classes. </p>
+                        <p>Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p> 
+                        <p>Where else are you going to learn Martial Arts and get  fit at the same time.</p>
+                        <p>This programme will teach you all the basic, intermediate and advanced techniques in order to give you the skills to make you a rounded Martial Artist and if desired eventually toward a Black Belt.</p>
+                        <p>Come and see for yourself and book free lessons to try out taekwondo with us.</p>
                     </div>
                     <div class="col-md-4">
                         <h3>Class Coaches</h3>
                         <div class="container">
-                <h2>Meet Our Coaching Team</h2>
                 <div class="row">
                     <div class="col">
-                        <div class="card classcard">                           
+                        <div class="card coachcard">                           
                             <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                           <div class="card-body">
                                     <h4 class="card-title">Laura Williams</h4>
@@ -86,7 +87,7 @@
                         </div>
                     </div>
                     <div class="col">
-                        <div class="card classcard">   
+                        <div class="card coachcard">   
                             <img src="assets/images/holly.jpg" class="card-img-top" alt="Coach Emma">
                           <div class="card-body">
                                     <h4 class="card-title">Holly White</h4>
