--- a/class_tiger.html
+++ b/class_tiger.html
@@ -70,14 +70,15 @@
                         <img class="classimage" src="assets/images/tigers3.jpeg" alt="Tigers in training">
                         <p>Our Tigers programme has been specifically created to be interactive and engaging for our youngest of Martial Artists.</p>
                         <p>The Tiger's learn through a variety of games and activities that introduce the techniques and skills which will set them up for our older classes.</p>
-                        <p>The programme designed for the Tigers goes beyond the teaching of Martial Arts and self-defence to include the teaching of self-protection, important life skills and character education. Every parent’s paramount concern is their children’s safety, so we include safety orientated lessons that focus on topics such as dealing with bullies and strangers.</p>
+                        <p>The programme designed for the Tigers goes beyond the teaching of Martial Arts and self-defence to include the teaching of self-protection, important life skills and character education.</p>
+                        <p>Every parent’s paramount concern is their children’s safety, so we include safety orientated lessons that focus on topics such as dealing with bullies and strangers.</p>
                     </div>
                     <div class="col-md-4">
                         <h3>Class Coaches</h3>
                         <div class="container">
                             <div class="row card-row">
                               <div class="col">
-                                <div class="card classcard">
+                                <div class="card coachcard">
                                     <img src="assets/images/laura.jpg" class="card-img-top" alt="Coach Laura">
                                      <div class="card-body">
                                         <h4 class="card-title">Laura Williams</h4>
@@ -86,7 +87,7 @@
                                 </div>
                             </div>
                             <div class="col">
-                                <div class="card classcard">
+                                <div class="card coachcard">
                                     <img src="assets/images/emma.jpg" class="card-img-top" alt="Coach Emma">
                                   <div class="card-body">
                                     <h4 class="card-title">Emma Owen</h4>
