--- a/contact.html
+++ b/contact.html
@@ -56,9 +56,12 @@
                 <div class="row">
                     <form class="col-md-8">
                         <!--Form Itself-->
-                        <input type="text" class="form-control" placeholder="First name" aria-label="First name">
-                        <input type="text" class="form-control" placeholder="Last name" aria-label="Last name">
-                        <input type="email" class="form-control" placeholder="Email Address" aria-label="Email Address">
+                        <label for="fname">First Name:</label>
+                        <input type="text" class="form-control" id="fname" placeholder="First name" aria-label="First name" required>
+                        <label for="lname">Last Name:</label>
+                        <input type="text" class="form-control" id="lname" placeholder="Last name" aria-label="Last name" required>
+                        <label for="email">Email Address:</label>
+                        <input type="email" class="form-control" id="email" placeholder="Email Address" aria-label="Email Address" required>
                         <div>
                             <p>Which classes are you interested in?</p>
 			                <input type="checkbox" id="tigers-checkbox" name="tigers">
@@ -69,6 +72,12 @@
 			                <label for="seniors-checkbox">Seniors</label>
                             <input type="checkbox" id="ladies-checkbox" name="ladies">
 			                <label for="ladies-checkbox">Ladies</label>
+                        </div>
+                        <div>
+                            <p>Additional Questions:</p>
+                            <textarea class="queries" placeholder="Additonal Questions">
+
+                            </textarea>
                         </div>
                         <button type="button" class="btn btn-danger">Free Lesson Please</button>
                     </form>
