--- a/index.html
+++ b/index.html
@@ -87,51 +87,50 @@
             <div class="container">
                 <div class="row card-row">
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
+                        <div class="card classcard">
                             <div class="card-header head-tiger">
                                 <h5 class="card-title">Tigers</h5>
                             </div>
                             <img src="assets/images/tiger1.jpg" class="card-img-top" alt="Tigers in training">
                           <div class="card-body">
-                              <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games. </p>
-                              <a href="class_tiger.html" class="btn btn-primary">Go somewhere</a>
+                              <p class="card-text">Aimed at our littlest ninjas. Our Tiger Class teaches the basics of Taekwondo through a variety of games - They will not realise they are learning. Hoewver what they will realise is how fun it is. </p>
+                              <a href="class_tiger.html" class="btn btn-primary">Join In</a>
                           </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
+                        <div class="card classcard">
                          <div class="card-header head-juniors">
                              <h5 class="card-title">Juniors</h5>
                          </div>
                          <img src="assets/images/junior1.jpg" class="card-img-top" alt="Juniors in class training">
                          <div class="card-body">
-                             <p class="card-text">Our junior classes are perfect for children aged 8 – 12 years old.  They will have fun and meet other children with similar interests, whilst burning away that abundance of energy before bed time.
-</p>
-                              <a href="class_junior.html" class="btn btn-primary">Go somewhere</a>
+                             <p class="card-text">Our junior classes are perfect for children aged 6 – 13 years old.  They will have fun and meet other children with similar interests, whilst learning skills that will transcend the classroom.</p>
+                              <a href="class_junior.html" class="btn btn-primary">Join In</a>
                          </div>
                         </div>
                     </div>
                     <div class="col-sm-6 col-md-3">
-                        <div class="card">
+                        <div class="card classcard">
                          <div class="card-header head-seniors">
                              <h5 class="card-title">Seniors</h5>
                          </div>
                          <img src="assets/images/senior1.jpg" class="card-img-top" alt="Seniors in class session">
                          <div class="card-body">
                              <p class="card-text">This programme will teach you all the basic, intermediate and advanced techniques in order to make you a rounded Martial Artist and eventually take you to Black Belt where your Martial Arts journey will continue.</p>
-                              <a href="class_senior.html" class="btn btn-primary">Go somewhere</a>
+                              <a href="class_senior.html" class="btn btn-primary">Join In</a>
                           </div>
                         </div>
                  </div>
                  <div class="col-sm-6 col-md-3">
-                     <div class="card">
+                     <div class="card classcard">
                          <div class="card-header head-ladies">
                              <h5 class="card-title">Ladies   <span class="badge bg-success">New</span></h5>
                          </div>
                           <img src="assets/images/ladies1.jpeg" class="card-img-top" alt="ladies training">
                          <div class="card-body">
                              <p class="card-text">Whether it is for fitness, knowledge of self defence. Our Ladies Only classes are great fun and help you cover all this, with increases in flexibility stamina and toning.</p>
-                              <a href="class_ladies.html" class="btn btn-primary">Go somewhere</a>
+                              <a href="class_ladies.html" class="btn btn-primary">Join In</a>
                          </div>
                      </div>
                  </div>
@@ -139,13 +138,36 @@
             </div>
             <!-- Contact Information-->
            <div class="container">
-                <div class="row contact-info">
+                <div class="row">
                     <div class="col-sm-6">
-                     Phone Number
-                     Email address
+                     <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Address:</p>
+                            </div>
+                            <div class="value">
+                                <p>St Dogmaels Memorial Hall, St Dogmaels, SA43 RFF </p>
+                            </div>
+                        </div>
+                        <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Telephone Number:</p>
+                            </div>
+                            <div class="value">
+                                <p>Coach Laura: 07091191144</p>
+                                <p>Coach Holly: 07911123456</p>
+                            </div>
+                        </div>
+                        <div class="contact-info-item">
+                            <div class="key">
+                                <p class="uppercase">Email Address:</p>
+                            </div>
+                            <div class="value">
+                                <p>coach@teifitkd.co.uk</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="col-sm-6">
-                    <img id="map" src="assets/images/map.jpg" alt="class location">
+                        <img id="map" src="assets/images/map.jpg" alt="class location">
                     </div>
                 </div>
             </div> 
