Addition of carousel on index.html

--- a/about.html
+++ b/about.html
@@ -56,7 +56,14 @@
             <div class="container">
                 <div class="row">
                     <div class="col-md-8 history">
-                        <h2 class="uppercase">Why Join Teifi Taekwondo?</h2>
+                        <h2 class="uppercase">What is Taekwondo?</h2>
+                        <p>Taekwondo is a Martial Art from Korea, characterised by punching and kicking techniques with a focus on fast kicking techniques. It’s name is composed of three parts as shown in the English spelling, though it is one word in Korean. "Tae" means "foot,"; "Kwon" means "fist,"; and "Do" means the "way". It is quite literally the Way of the Foot and the Fist.</p>
+                        <p>There are two main styles of Taekwondo.
+                            <ul>
+                                <li><strong>World Taekwondo</strong> (WT) formally World Taekwondo Federation (WTF) is commonly known as 'Olympic Taekwondo'. It is the style seen in the Olympics since its inclusion at Sydney 2000. Wales’ own Jade Jones is a Double Olympic Champion claiming the tites in London 2012 and Rio De janerio in 2016.</li>
+                                <li><strong>International Taekwondo Federation</strong> (ITF) the style in which we at Teifi Taekwondo train. Although not the Olympic style, it doesn’t mean that you cannot one day  become Olympic Champion- Ms Jones herself started in the ITF style before changing to the WT rules set.</li>
+                            </ul> 
+                        </p>
                     </div>
                     <div class="col-md-4">
                         Gallery?
