--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
             <!-- Contact Information-->
            <div class="container">
                 <div class="row">
+                    <h2>Where to find Us?</h2>
                     <div class="col-sm-6">
                      <div class="contact-info-item">
                             <div class="key">
@@ -170,7 +171,46 @@
                         <img id="map" src="assets/images/map.jpg" alt="class location">
                     </div>
                 </div>
-            </div> 
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class="col testimonials">
+                        <h2>What our students say</h2>
+                        <div class="row">
+                            <div class="col">
+                                <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                                     <div class="carousel-inner">
+                                         <div class="carousel-item active">       
+                                                <blockquote>Laura, Holly and the team have given my daughter so much confidence since starting our silent ninja is a respectful warrior.</blockquote>
+                                                <p class="parent">Scott Summers</p>
+                                         </div>
+                                         <div class="carousel-item">
+                                                <blockquote>The focus on fun in these sessions is perfect. The skills and techniques are flooding in and my son doesn’t notice he’s learning.</blockquote>
+                                                <p class="parent">Jean Grey</p>
+                                         </div>
+                                         <div class="carousel-item">
+                                                <blockquote>The kids don’t want to leave the hall at 7:15 they want to mix it up with the seniors</blockquote>
+                                                <p class="parent">Matt Murdock</p>
+                                         </div>
+                                         <div class="carousel-item">
+                                                <blockquote>After sitting on the sidelines watching my children for months I was gently encouraged to stepped into the ladies class. I’m loving it, quickly catching the kids up and have enough confidence to join the senior class.</blockquote>
+                                                <p class="parent">Susan Storm</p>
+                                         </div>
+                                    </div>
+                                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
+                                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Previous</span>
+                                    </button>
+                                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="next">
+                                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                        <span class="visually-hidden">Next</span>
+                                    </button>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </section>
         <footer>
             <!-- sections 1 social media -->
